# msgapp

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: workflow.yaml
msgapp/: __init__.py  _app.py  _executor.py  _parser.py  _producer.py
msgapp/parsers/: json.py
msgapp/producers/: memory.py  pubsub.py
tests/: test_executors.py  test_memory.py  test_pubsub.py
