[tool.poetry]
name = "msgapp"
version = "0.1.3"
description = "Declarative message processing applications"
authors = ["Adrian Garcia Badaracco <dev@adriangb.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/adriangb/msgapp"

[tool.poetry.dependencies]
python = ">=3.7,<4"
anyio = ">=3.6.1"
pydantic = {version = ">=1.9.1", optional = true }
google-cloud-pubsub = { version = ">=2.13.4", optional = true }
typing-extensions = { version = "^4.3.0", python = "<3.8"}

[tool.poetry.extras]
pubsub = ["google-cloud-pubsub"]
json = ["pydantic"]
dev = [
    "google-cloud-pubsub",
    "pydantic",
]

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
pytest = "*"
pre-commit = "*"
pytest-cov = "*"
trio = "*"
isort = "*"
flake8 = "*"
mypy = "*"

[tool.poetry.group.dev.dependencies]
types-redis = "^4.3.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = ["msgapp", "tests"]
dynamic_context = "test_function"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    '\.\.\.',
    "raise NotImplementedError",
    "TYPE_CHECKING",
    "__repr__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = "msgapp/**/*.py,tests/**/*.py"
show_error_codes = true
pretty = true
warn_unreachable = true
strict = true
warn_unused_ignores = false
